--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p class="text-slate-500 font-mono text-sm mt-2">SECURED FEED • SORTED BY LATEST</p>
         </header>
 
-        <main class="max-w-7xl mx-auto grid grid-cols-1 xl:grid-cols-2 2xl:grid-cols-4 gap-8">
+        <main class="max-w-[1600px] mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
             <!-- WORLD NEWS COLUMN -->
             <section class="space-y-6">
                 <div class="flex items-center gap-4 mb-8">
