--- a/index.html
+++ b/index.html
@@ -3,96 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daily Intelligence Briefing - 2026-02-27</title>
+    <title>MACBOT 新聞中心 | Roland's Intelligence Briefing</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; line-height: 1.6; max-width: 900px; margin: 0 auto; padding: 20px; background-color: #f0f2f5; color: #1c1e21; }
-        h1 { border-bottom: 2px solid #007aff; padding-bottom: 15px; color: #1c1e21; }
-        .section-title { font-size: 1.2em; font-weight: bold; margin: 30px 0 15px; color: #007aff; text-transform: uppercase; border-left: 4px solid #007aff; padding-left: 10px; }
-        .card { background: #fff; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.08); padding: 25px; margin-bottom: 20px; transition: transform 0.2s; }
-        .card:hover { transform: translateY(-3px); }
-        .date { color: #65676b; font-size: 0.85em; margin-bottom: 8px; font-weight: 500; }
-        .category { background: #e7f3ff; color: #007aff; padding: 4px 12px; border-radius: 20px; font-size: 0.75em; font-weight: bold; margin-bottom: 12px; display: inline-block; }
-        h2 { margin: 0 0 12px; font-size: 1.5em; line-height: 1.3; }
-        .summary { color: #4b4f56; font-size: 1em; margin-bottom: 15px; }
-        .footer { display: flex; justify-content: space-between; align-items: center; border-top: 1px solid #ebedf0; pt: 15px; mt: 10px; font-size: 0.9em; }
-        .source { font-weight: 700; color: #007aff; }
-        .link { color: #007aff; text-decoration: none; font-weight: bold; }
-        .link:hover { text-decoration: underline; }
+        body { background-color: #0f172a; color: #f1f5f9; }
+        .news-card { background-color: #1e293b; border-left: 4px solid #38bdf8; transition: transform 0.2s; }
+        .news-card:hover { transform: translateY(-2px); }
     </style>
 </head>
-<body>
-    <h1>🗞️ Daily Intelligence Briefing</h1>
-    <p style="color: #65676b;">Friday, February 27, 2026 | Result-Oriented Update</p>
-
-    <div class="section-title">🔥 Headlines & Business</div>
-    <div class="card">
-        <div class="date">📅 2026-02-27</div>
-        <div class="category">Business / M&A</div>
-        <h2>華納兄弟稱其派拉蒙收購報價優於對手，市場屏息以待 Netflix 回應</h2>
-        <p class="summary">華納兄弟探索公司 (Warner Bros. Discovery) 今日宣布對派拉蒙全球嘅收購條款已全面升級，聲稱其報價遠優於目前市場上嘅其他對手。媒體分析師認為，Netflix 是否會喺今日內做出反擊，將決定全球媒體版圖嘅最新走勢。</p>
-        <div class="footer">
-            <span class="source">Reuters</span>
-            <a href="#" class="link">Read More &rarr;</a>
+<body class="font-sans min-h-screen">
+    <header class="bg-slate-900 border-b border-slate-700 p-6 sticky top-0 z-10 shadow-xl">
+        <div class="max-w-4xl mx-auto flex justify-between items-center">
+            <div>
+                <h1 class="text-2xl font-bold text-sky-400">🍏 MACBOT 新聞中心</h1>
+                <p class="text-slate-400 text-sm">Roland's Daily Intelligence Briefing</p>
+            </div>
+            <div id="update-date" class="text-right text-slate-500 text-xs font-mono">
+                Loading...
+            </div>
         </div>
-    </div>
+    </header>
 
-    <div class="section-title">🤖 Artificial Intelligence</div>
-    <div class="card">
-        <div class="date">📅 2026-02-27</div>
-        <div class="category">AI / Tech</div>
-        <h2>匯豐環球研究：『軟件將吞噬 AI』，投資重心轉向應用層面</h2>
-        <p class="summary">匯豐今日發佈重磅報告，指出 AI 硬件（如 Nvidia）嘅擴張已接近飽和，下一波增長動力將由垂直領域嘅軟件商 (SaaS) 主導。報告列出咗包括 Salesforce 及多間金融專用 AI 公司在內嘅頂級 stock picks。</p>
-        <div class="footer">
-            <span class="source">CNBC</span>
-            <a href="#" class="link">Read More &rarr;</a>
+    <main class="max-w-4xl mx-auto p-6">
+        <div id="news-container" class="space-y-6">
+            <div class="text-center py-20 text-slate-500">
+                <p class="animate-pulse">正在同步全球數據...</p>
+            </div>
         </div>
-    </div>
+    </main>
 
-    <div class="card">
-        <div class="date">📅 2026-02-27</div>
-        <div class="category">AI / Policy</div>
-        <h2>聯合國就 AI 全球監管框架達成歷史性共識，確保技術造福人類</h2>
-        <p class="summary">聯合國今日通過咗首個具備實質約束力嘅 AI 全球監管框架，重點打擊 AI 武器化及深度偽造技術，同時推動跨國合作以縮減全球數碼鴻溝。</p>
-        <div class="footer">
-            <span class="source">UN News</span>
-            <a href="#" class="link">Read More &rarr;</a>
-        </div>
-    </div>
+    <footer class="text-center p-10 text-slate-600 text-xs border-t border-slate-800 mt-10">
+        &copy; 2026 Macbot Intelligence Engine | Powered by OpenClaw
+    </footer>
 
-    <div class="section-title">🛡️ Cybersecurity</div>
-    <div class="card">
-        <div class="date">📅 2026-02-27</div>
-        <div class="category">Cyber Security</div>
-        <h2>WEF 發佈 2026 網絡威脅展望：AI 驅動嘅攻擊將成最大風險</h2>
-        <p class="summary">世界經濟論壇 (WEF) 今日警告，隨住 AI 代理技術成熟，黑客正利用自動化工具進行大規模漏洞偵測與憑證竊取，全球企業需加快向『Zero Trust』架構轉型。</p>
-        <div class="footer">
-            <span class="source">World Economic Forum</span>
-            <a href="#" class="link">Read More &rarr;</a>
-        </div>
-    </div>
+    <script>
+        async function loadNews() {
+            try {
+                const response = await fetch('news_data.json?t=' + new Date().getTime());
+                const data = await response.json();
+                
+                // Get today's date or the latest date in data
+                const latestDate = data[0]?.date || 'Unknown';
+                document.getElementById('update-date').innerText = 'LAST SYNC: ' + latestDate;
 
-    <div class="section-title">💰 Fintech & Finance</div>
-    <div class="card">
-        <div class="date">📅 2026-02-27</div>
-        <div class="category">Fintech</div>
-        <h2>M2P Fintech 預測：2026 將係『垂直 AI 銀行』爆發之年</h2>
-        <p class="summary">分析預計，金融機構將捨棄通用 AI，轉向使用能夠滿足嚴格監管、具備『可解釋性』嘅垂直領域 AI 引擎，以實現自動化風險控管及實時 compliance 監控。</p>
-        <div class="footer">
-            <span class="source">M2P Fintech</span>
-            <a href="#" class="link">Read More &rarr;</a>
-        </div>
-    </div>
+                const container = document.getElementById('news-container');
+                container.innerHTML = '';
 
-    <div class="card">
-        <div class="date">📅 2026-02-27</div>
-        <div class="category">Fintech / Reporting</div>
-        <h2>LiqTech International 公佈 2025 財年亮眼業績，股價應聲上漲</h2>
-        <p class="summary">專注於精密過濾技術嘅清潔科技公司 LiqTech (NASDAQ: LIQT) 今日公佈全年業績，得益於國際工業數碼化需求，營收創下歷史新高。</p>
-        <div class="footer">
-            <span class="source">GlobeNewswire</span>
-            <a href="#" class="link">Read More &rarr;</a>
-        </div>
-    </div>
-
+                data.forEach(item => {
+                    const card = document.createElement('div');
+                    card.className = 'news-card p-5 rounded-xl shadow-lg';
+                    card.innerHTML = `
+                        <div class="flex justify-between items-start mb-2">
+                            <span class="text-[10px] bg-sky-900 text-sky-200 px-2 py-0.5 rounded uppercase font-bold tracking-wider">${item.date}</span>
+                            <a href="${item.url}" target="_blank" class="text-sky-400 hover:text-sky-300">
+                                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path></svg>
+                            </a>
+                        </div>
+                        <h2 class="text-lg font-bold text-white mb-1">${item.title_zh}</h2>
+                        <h3 class="text-sm font-medium text-slate-400 mb-3 italic">${item.title_en}</h3>
+                        <p class="text-slate-300 text-sm leading-relaxed mb-4">${item.summary_zh}</p>
+                        <hr class="border-slate-700 mb-4">
+                        <p class="text-slate-500 text-xs italic leading-relaxed">${item.summary_en}</p>
+                    `;
+                    container.appendChild(card);
+                });
+            } catch (error) {
+                document.getElementById('news-container').innerHTML = `
+                    <div class="bg-red-900/20 border border-red-500/50 p-6 rounded-xl text-center">
+                        <p class="text-red-400 font-bold mb-2">數據讀取失敗</p>
+                        <p class="text-slate-400 text-sm italic">請確保 news_data.json 已正確 Push。詳情請聯絡管家 Macbot。</p>
+                    </div>
+                `;
+            }
+        }
+        loadNews();
+    </script>
 </body>
 </html>
