--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MACBOT 新聞中心 | Roland's Intelligence Briefing</title>
+    <title>🍏 MACBOT 新聞中心 | Roland's Intelligence Briefing</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body { background-color: #0f172a; color: #f1f5f9; }
         .news-card { background-color: #1e293b; border-left: 4px solid #38bdf8; transition: transform 0.2s; }
-        .news-card:hover { transform: translateY(-2px); }
+        .news-card:hover { transform: translateY(-2px); filter: brightness(1.1); }
     </style>
 </head>
 <body class="font-sans min-h-screen">
@@ -18,63 +18,57 @@
                 <h1 class="text-2xl font-bold text-sky-400">🍏 MACBOT 新聞中心</h1>
                 <p class="text-slate-400 text-sm">Roland's Daily Intelligence Briefing</p>
             </div>
-            <div id="update-date" class="text-right text-slate-500 text-xs font-mono">
-                Loading...
-            </div>
+            <div id="update-date" class="text-right text-slate-500 text-xs font-mono">Loading...</div>
         </div>
     </header>
 
-    <main class="max-w-4xl mx-auto p-6">
-        <div id="news-container" class="space-y-6">
-            <div class="text-center py-20 text-slate-500">
-                <p class="animate-pulse">正在同步全球數據...</p>
-            </div>
+    <nav class="bg-slate-800 p-2 border-b border-slate-700 sticky top-20 z-10 overflow-x-auto">
+        <div class="max-w-4xl mx-auto flex gap-6 text-xs font-bold uppercase tracking-wider text-slate-400 p-2">
+            <button onclick="filterNews('ALL')" class="hover:text-sky-400">ALL</button>
+            <button onclick="filterNews('World')" class="hover:text-sky-400">WORLD</button>
+            <button onclick="filterNews('AI')" class="hover:text-sky-400">AI</button>
+            <button onclick="filterNews('Fintech')" class="hover:text-sky-400">FINTECH</button>
+            <button onclick="filterNews('Cyber Security')" class="hover:text-sky-400">SECURITY</button>
         </div>
+    </nav>
+
+    <main class="max-w-4xl mx-auto p-6">
+        <div id="news-container" class="space-y-6"></div>
     </main>
 
-    <footer class="text-center p-10 text-slate-600 text-xs border-t border-slate-800 mt-10">
-        &copy; 2026 Macbot Intelligence Engine | Powered by OpenClaw
-    </footer>
-
     <script>
+        let newsData = [];
         async function loadNews() {
-            try {
-                const response = await fetch('news_data.json?t=' + new Date().getTime());
-                const data = await response.json();
-                
-                // Get today's date or the latest date in data
-                const latestDate = data[0]?.date || 'Unknown';
-                document.getElementById('update-date').innerText = 'LAST SYNC: ' + latestDate;
-
-                const container = document.getElementById('news-container');
-                container.innerHTML = '';
-
-                data.forEach(item => {
-                    const card = document.createElement('div');
-                    card.className = 'news-card p-5 rounded-xl shadow-lg';
-                    card.innerHTML = `
-                        <div class="flex justify-between items-start mb-2">
-                            <span class="text-[10px] bg-sky-900 text-sky-200 px-2 py-0.5 rounded uppercase font-bold tracking-wider">${item.date}</span>
-                            <a href="${item.url}" target="_blank" class="text-sky-400 hover:text-sky-300">
-                                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path></svg>
-                            </a>
-                        </div>
-                        <h2 class="text-lg font-bold text-white mb-1">${item.title_zh}</h2>
-                        <h3 class="text-sm font-medium text-slate-400 mb-3 italic">${item.title_en}</h3>
-                        <p class="text-slate-300 text-sm leading-relaxed mb-4">${item.summary_zh}</p>
-                        <hr class="border-slate-700 mb-4">
-                        <p class="text-slate-500 text-xs italic leading-relaxed">${item.summary_en}</p>
-                    `;
-                    container.appendChild(card);
-                });
-            } catch (error) {
-                document.getElementById('news-container').innerHTML = `
-                    <div class="bg-red-900/20 border border-red-500/50 p-6 rounded-xl text-center">
-                        <p class="text-red-400 font-bold mb-2">數據讀取失敗</p>
-                        <p class="text-slate-400 text-sm italic">請確保 news_data.json 已正確 Push。詳情請聯絡管家 Macbot。</p>
+            const res = await fetch('news_data.json?t=' + Date.now());
+            newsData = await res.json();
+            document.getElementById('update-date').innerText = 'LAST SYNC: ' + (newsData[0]?.date || 'Today');
+            renderNews(newsData);
+        }
+        function renderNews(data) {
+            const container = document.getElementById('news-container');
+            container.innerHTML = data.map(item => `
+                <div class="news-card p-6 rounded-lg shadow-lg">
+                    <div class="flex justify-between items-start mb-3">
+                        <span class="text-xs font-bold text-sky-500 uppercase">${item.category || 'World'}</span>
+                        <span class="text-xs text-slate-500 font-mono">${item.date}</span>
                     </div>
-                `;
-            }
+                    <h2 class="text-xl font-bold text-white mb-2 leading-tight">
+                        ${item.cn_title}
+                        <div class="text-slate-400 text-sm font-medium mt-1">${item.en_title}</div>
+                    </h2>
+                    <div class="space-y-2 mb-4">
+                        <p class="text-slate-300 text-sm">${item.cn_summary}</p>
+                        <p class="text-slate-500 text-xs italic">${item.en_summary}</p>
+                    </div>
+                    <div class="flex justify-between items-center text-xs">
+                        <span class="text-slate-400">Source: ${item.source}</span>
+                        <a href="${item.link}" target="_blank" class="text-sky-400 hover:underline font-bold">READ FULL ARTICLE &rarr;</a>
+                    </div>
+                </div>
+            `).join('');
+        }
+        function filterNews(cat) {
+            renderNews(cat === 'ALL' ? newsData : newsData.filter(i => i.category === cat));
         }
         loadNews();
     </script>
